# salience-simulation-lab

./: .gitignore  AGENTS.md  Anomaly_P.md  CITATION.cff  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
LICENSES/: CC-BY-4.0.txt
artifacts/adversarial_defense/: defense_comparison_20251104_195012.json  defense_comparison_20251104_195209.json
artifacts/burst_release/: burst_release_20251103_015440.json
artifacts/causality_probe/: causality_probe_extended_20251103_000740.json
artifacts/cluster_fit/: coupling_sweep_20251104_194934.json
artifacts/coherence_scanner/: causality_probe_20251102_214926.json  coherence_scan_20251102_213809.json
artifacts/coupled_domain/: coupled_domain_20251104_044458.json  coupled_domain_20251104_050108.json  coupled_domain_20251104_060300.json  coupled_domain_20251104_060424.json
artifacts/energy_anomaly_investigation/: INVESTIGATION_SUMMARY.md  README.md
artifacts/fast_modes/: fast_modes_summary_20251103_053527.json  fast_modes_summary_20251103_060823.json
artifacts/mass_sweep/: adaptive_mass_20251102_225743.json  adaptive_mass_20251102_230123.json  adaptive_mass_20251102_230353.json  adaptive_mass_20251102_230504.json  adaptive_mass_20251102_230837.json  adaptive_mass_20251102_231130.json  adaptive_mass_20251102_233713.json  adaptive_mass_20251102_234049.json  adaptive_mass_20251102_235104.json  adaptive_mass_20251102_235200.json  adaptive_mass_20251103_001519.json  adaptive_mass_20251103_002738.json  continuity_subsidy_20251103_014853.json  continuity_subsidy_20251103_015112.json  continuity_subsidy_20251103_023649.json  continuity_subsidy_20251103_024850.json  mass_energy_20251103_001753.json  mass_stress_20251104_042123.json  mass_stress_20251104_042444.json  mass_stress_20251104_042941.json  (+45 more)
artifacts_sparc/: README.md  kappa_analysis.txt  metrics.txt
docs/: CONCEPTS.md
empirical_validation/: __init__.py  rotation_curve_validation.py
profiles/: identity_craft.json  identity_speed.json
scripts/: FINAL_VERDICT.txt  VERIFICATION_REPORT.md  adaptive_inertia_sim.py  adversarial_defense_mechanisms.py  adversarial_salience_attack.py  analyze_branches.py  analyze_extended_mass.py  analyze_f5631.py  analyze_f5718.py  analyze_protective_strain.py  analyze_sparc_scores.py  authority_reentry_probe.py  burst_release_sim.py  calc_sigma_coupling.py  causality_test.py  causality_test_extended.py  cluster_salience_fit.py  coherence_scanner.py  continuity_mass_sim.py  continuity_subsidy_sim.py  coupled_domain_energy.py  create_summary_figure.py  diagnose_energy_anomaly.py  diagnose_sparc_quality.py  energy_accounting.py  extract_rotmod.py  fit_halo_outliers.py  generate_final_report.py  goldilocks_sweep.py  inspect_rotmod_zip.py  inspect_sparc_galaxy.py  list_sparc_links.py  load_sparc_sample.py  neuro_salience_trial.py  per_galaxy_kappa.py  print_f5718_metadata.py  protective_strain_sweep.py  protective_strain_sweep_v2.py  pulsed_overclock_train.py  quantum_salience_3qubit.py  (+35 more)
tests/: __init__.py  test_galaxy.py  test_model.py  test_scores.py
(+47 files in other folders)
